# MicroAnnexXL

R10p0R23/bfs/: afd_list  digimodem_image  mod_mic-2_4_81  modems.annex  oper.52.enet  pri_4ess-1_13  pri_aus-1_35
R10p0R23/bsac/: annex.dci  radius.dct
R10p0R23/setup/: .daemon  .ed_eservices  .install_part2  .install_part3  .media_read  .mk_eservices  .not_nis  .regime_check  .util_size  extract-it  install-annex  install_gui_am
XL11/: gui_am.txt  install  readme.txt  releases.txt  software.txt
annex-8.0/bfs/: afd_list  cas_e1t1-1_45  digimodem_image  oper.64.enet  pri_aus-1_42  pri_csu-1_238  pri_e1-1_65-EK7  pri_e1-1_80  pri_ntt-1_7  pri_sng-1_5
annex-8.0/raddb/: vendordiff.txt
annex-8.0/setup/: .bfs_configfile  .ed_rc  .ed_restrict  .ed_services  .filedatafile  .get_pids  .media_ask  .media_read  .mk_initd  .mk_rc  .msg_file  .regime_check  .select_image  .update_files  README  install  install-annex  release  software.txt
bfs/: config.annex  oper.42.enet  pri_csu-1_234b  pri_dgt-1_4  pri_e1-1_65-EK7  pri_e1-1_71  pri_hkt-1_3  pri_isr-1_6  pri_ntt-1_7  pri_sng-1_5  pri_t1-1_128
bsac/: annex.dct
gui_am/: gui_am.txt
man/cat/: acp_dbm.8  aprint.1  erpcd.8  eservices.5  gateways.5  rotaries.5  timserver.8
man/src/: acp_dbm.8  rtelnet.8  (+2 more)
new/: CMakeLists.txt
new/libannex/: CMakeLists.txt  api_if.c  api_if.h  asn1.c  asn1.h  bcopy.c  conv.c  erpc_subr.c  inet.c  random.c  sendrecv.c
setup/: .am_root  .bfs_configfile  .filedatafile  .media_ask  .mk_initd  .mk_restrict  .mk_services  .msg_file  .select_image  .update_files  README  install  release
(+358 files in other folders)
